--- a/notebooks/17_predictions_Fold_object.ipynb
+++ b/notebooks/17_predictions_Fold_object.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -28,22 +26,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Setting the units, parameters of the pulsar and predictions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -51,7 +42,7 @@
        "1.2147852890204997e-13"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,10 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "All errors manipulated are fractionnal and dimensionless, the error analysis is still under development and need reviewing. It is documented in LaTex below for better reading.\n",
     "\n",
@@ -105,11 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -120,7 +106,7 @@
     "            name (string) : for printing purposes\n",
     "            dtheta, mu : 2-elements array or list, \n",
     "              error is the second value of the theta and mu lists,\n",
-    "              in the same dimensions, if no error set to 0\n",
+    "              in the same dimensions\n",
     "        return :\n",
     "            self.err_mu : fractionnal error on mu\n",
     "            self.err_dtheta : fractionnal error on dtheta\n",
@@ -259,10 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Here is a readable explanation of error propagation into the Fold object, for simplicity, we note $\\frac{\\mu}{\\mu_0}$ as $\\mu$. All the analytical propagation have the actual calculation on the left and the error on the right. The rules used are that constant don't affect the error, a power multiplies the fractional error and products of powers use the general formula for $z= cx^Ny^M$,\n",
     "\n",
@@ -292,10 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Testing bootstapping errors"
    ]
@@ -304,13 +284,7 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-<<<<<<< HEAD
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-=======
     "collapsed": true
->>>>>>> 0bfdbb442365965aebd7dc7502c651018aa01e4a
    },
    "outputs": [],
    "source": [
@@ -323,11 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -347,11 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -368,11 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -420,11 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -481,11 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -528,66 +482,52 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Predictions with arclets bright in freq 00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0.00000000e+00,   1.62775000e+01,   0.00000000e+00,\n",
-       "          1.11499714e-03,   0.00000000e+00],\n",
-       "       [  1.00000000e+00,   1.85079000e+01,   0.00000000e+00,\n",
-       "          2.05843433e-03,   0.00000000e+00],\n",
-       "       [  2.00000000e+00,   1.90237000e+01,   0.00000000e+00,\n",
-       "          1.38508566e-03,   0.00000000e+00],\n",
-       "       [  3.00000000e+00,   1.91462000e+01,   0.00000000e+00,\n",
-       "          1.04314493e-03,   0.00000000e+00],\n",
-       "       [  4.00000000e+00,   2.03450000e+01,   0.00000000e+00,\n",
-       "          1.13914473e-03,   0.00000000e+00],\n",
-       "       [  5.00000000e+00,   2.20030000e+01,   0.00000000e+00,\n",
-       "          1.25168843e-03,   0.00000000e+00],\n",
-       "       [  6.00000000e+00,   2.26010000e+01,   0.00000000e+00,\n",
-       "          1.24448022e-03,   0.00000000e+00],\n",
-       "       [  7.00000000e+00,   2.47330000e+01,   0.00000000e+00,\n",
-       "          7.35090703e-04,   0.00000000e+00]])"
+       "array([[  0.00000000e+00,   1.62775000e+01,   1.60107338e-01,\n",
+       "          1.11499714e-03,   5.34676869e-03],\n",
+       "       [  1.00000000e+00,   1.85079000e+01,   1.82045605e-01,\n",
+       "          2.05843433e-03,   9.87085241e-03],\n",
+       "       [  2.00000000e+00,   1.90237000e+01,   1.87119029e-01,\n",
+       "          1.38508566e-03,   6.64192968e-03],\n",
+       "       [  3.00000000e+00,   1.91462000e+01,   1.88323942e-01,\n",
+       "          1.04314493e-03,   5.00221430e-03],\n",
+       "       [  4.00000000e+00,   2.03450000e+01,   2.00115379e-01,\n",
+       "          1.13914473e-03,   5.46256412e-03],\n",
+       "       [  5.00000000e+00,   2.20030000e+01,   2.16423528e-01,\n",
+       "          1.25168843e-03,   6.00224723e-03],\n",
+       "       [  6.00000000e+00,   2.26010000e+01,   2.22305480e-01,\n",
+       "          1.24448022e-03,   5.96768153e-03],\n",
+       "       [  7.00000000e+00,   2.47330000e+01,   2.43275924e-01,\n",
+       "          7.35090703e-04,   3.52499554e-03]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arclets = np.loadtxt('/mnt/scratch-lustre/bdesy/b0834/data/results/ratio_main_masks_method/arclet00_ID_dthetas_mus3001_vf.txt')"
+    "arclets = np.loadtxt('../data/results/ratio_main_masks_method/arclet00_ID_dthetas_mus3001_vf.txt')\n",
+    "arclets"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-=======
    "execution_count": 33,
    "metadata": {
     "collapsed": true
->>>>>>> 0bfdbb442365965aebd7dc7502c651018aa01e4a
    },
    "outputs": [],
    "source": [
@@ -596,11 +536,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -609,24 +546,14 @@
      "output_type": "stream",
      "text": [
       "dtheta         theta        beta        R [pc]     more or less\n",
-      "16.2775       0.02722     -16.2503    145.2624     28.11531  \n",
-      "18.5079       0.05715     -18.4508    1736.962     336.1861  \n",
-      "19.0237       0.03952     -18.9842    607.1532     117.5135  \n",
-      "19.1462       0.02996     -19.1162    267.8184     51.83582  \n",
-      "20.345       0.03476     -20.3102    472.5183     91.45516  \n",
-      "22.003       0.04131     -21.9617    927.4525     179.5069  \n",
-      "22.601       0.04219     -22.5588    1042.307     201.7369  \n",
-      "24.733       0.02727     -24.7057    337.1322     65.2514  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "scripts/custom_functions.py:192: RuntimeWarning: invalid value encountered in power\n",
-      "  + ( s * dn * thetaR * thetaT)/(theta**3.*(1. + thetaR/(2. * theta))**(1./2.))))\n",
-      "scripts/custom_functions.py:192: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  + ( s * dn * thetaR * thetaT)/(theta**3.*(1. + thetaR/(2. * theta))**(1./2.))))\n"
+      "16.2775       0.02722     -16.2503    145.2624     2089.941  \n",
+      "18.5079       0.05715     -18.4508    1736.962     24990.27  \n",
+      "19.0237       0.03952     -18.9842    607.1532     8735.325  \n",
+      "19.1462       0.02996     -19.1162    267.8184     3853.196  \n",
+      "20.345       0.03476     -20.3102    472.5183     6798.286  \n",
+      "22.003       0.04131     -21.9617    927.4525     13343.58  \n",
+      "22.601       0.04219     -22.5588    1042.307     14996.04  \n",
+      "24.733       0.02727     -24.7057    337.1322     4850.438  \n"
      ]
     }
    ],
@@ -641,10 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Now that we have objects to work on, it greatly lessens the chances to mess around with lists and whatnot. \n",
     "\n",
@@ -656,11 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -688,10 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "To make measurements on the predictions, I need to retransform the $\\theta$ in $\\Delta\\theta$"
    ]
@@ -699,11 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -732,11 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -765,11 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -825,11 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -858,10 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Testing for main arclet to see if 10x is a good approximation"
    ]
@@ -870,9 +768,7 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -885,9 +781,7 @@
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -897,11 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -935,9 +825,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "# Represent discrepancy between measurements and predictions"
@@ -946,11 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -988,11 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1023,9 +903,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -1034,9 +912,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
